src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Direct Opportunity Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Cancelled by Customer</fullName>
        </values>
        <values>
            <fullName>Closed - Lost to Competitor</fullName>
        </values>
        <values>
            <fullName>Closed - Obsolete</fullName>
        </values>
        <values>
            <fullName>Closed - Withdrawn by Nokia</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Create Offer %28Bid%29</fullName>
        </values>
        <values>
            <fullName>Develop Opportunity</fullName>
        </values>
        <values>
            <fullName>Execute %28Start Delivery%29</fullName>
        </values>
        <values>
            <fullName>Handover %28Prepare for Delivery%29</fullName>
        </values>
        <values>
            <fullName>Identify Opportunity</fullName>
        </values>
        <values>
            <fullName>Win the Case %28Negotiate%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Dummy Opportunity Sales Process</fullName>
        <description>No Sales Process for Dummy Opportunity</description>
        <isActive>true</isActive>
        <values>
            <fullName>Identify Opportunity</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Indirect Opportunity Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Cancelled by Customer</fullName>
        </values>
        <values>
            <fullName>Closed - Lost to Competitor</fullName>
        </values>
        <values>
            <fullName>Closed - Obsolete</fullName>
        </values>
        <values>
            <fullName>Closed - Withdrawn by Nokia</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Create Offer %28Bid%29</fullName>
        </values>
        <values>
            <fullName>Develop Opportunity</fullName>
        </values>
        <values>
            <fullName>Execute %28Start Delivery%29</fullName>
        </values>
        <values>
            <fullName>Handover %28Prepare for Delivery%29</fullName>
        </values>
        <values>
            <fullName>Identify Opportunity</fullName>
        </values>
        <values>
            <fullName>Win the Case %28Negotiate%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Pre-Sales Risk Sales Process</fullName>
        <description>PreSales : Sprint 6: Req#2171</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>In Execution</fullName>
        </values>
        <values>
            <fullName>Preparation</fullName>
        </values>
        <values>
            <fullName>Submitted For Approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Pre-opportunity</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Business Development</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Waiting for Sales Assignment</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ALU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Req. 529
Requirement 529: It will be changed to checkbox as discussed</description>
        <inlineHelpText>This field is automatically filled by the system in the opportunity record.This checkbox indicates if the opportunity country is among the listed countries where specific contracting needs are required.</inlineHelpText>
        <label>OLD ALU-I</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Activity_Sector__c</fullName>
        <description>8th Feb: As per our recent discussion, we will fetch the details from Account rather than LE&apos;s
As per SF Ticket: 00001814: It will fetch value from Account LE</description>
        <formula>TEXT(Legal_Entity__r.Activity_Sector_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Activity Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Entity_Number__c</fullName>
        <formula>Legal_Entity__r.AccountNumber</formula>
        <label>Account Legal Entity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Market_Segment__c</fullName>
        <description>Req 739: Indirect Opportunity Type
8th Feb: As per recent discussion, we will fetch this from Account
As per SF Ticket 00001814: We will fetch this from Account LE</description>
        <formula>TEXT( Legal_Entity__r.Market_Segment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Role__c</fullName>
        <inlineHelpText>Here there is additional information on Account Role definitions:

http://nok.it/iDcjm-</inlineHelpText>
        <label>Account Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alliance Partner</fullName>
                    <label>Alliance</label>
                </value>
                <value>
                    <fullName>Disti+SPaaP</fullName>
                </value>
                <value>
                    <fullName>Disti+VAR</fullName>
                </value>
                <value>
                    <fullName>GPP Distributor Partner</fullName>
                    <label>Distributor</label>
                </value>
                <value>
                    <fullName>ENaSP</fullName>
                </value>
                <value>
                    <fullName>Global Systems Integrator</fullName>
                </value>
                <value>
                    <fullName>Industrial partner</fullName>
                    <label>Industrial Partner</label>
                </value>
                <value>
                    <fullName>Other PSA</fullName>
                    <label>Integrator</label>
                </value>
                <value>
                    <fullName>NFS-SPaaP</fullName>
                </value>
                <value>
                    <fullName>Project Specific</fullName>
                </value>
                <value>
                    <fullName>GPP SPAAP partner</fullName>
                    <label>SPaaP</label>
                </value>
                <value>
                    <fullName>GPP VAR partner</fullName>
                    <label>VAR</label>
                </value>
                <value>
                    <fullName>VAR+SPaaP</fullName>
                </value>
                <value>
                    <fullName>WaaP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Offer_Price__c</fullName>
        <label>Active Offer Price</label>
        <summarizedField>Offer__c.Price__c</summarizedField>
        <summaryFilterItems>
            <field>Offer__c.ActiveOffer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Offer__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Contract_Signing_Date__c</fullName>
        <description>Specifies the actual contract signature date as found in CLM.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Contract Signing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advanced_PO_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales Process &gt; Feb Release 18 &gt;5591</description>
        <inlineHelpText>Confirm Advanced PO Booking via button on the dropdown top right in order to set OIF as Booked</inlineHelpText>
        <label>Advanced PO Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocation_Oppty__c</fullName>
        <description>Req::2724 If oppty have more than One allocation Lines then Flag will be true</description>
        <formula>IF(  (ISPICKVAL(Contract_Signing_Entity__c ,&apos;fNOK&apos;)&amp;&amp; OIF_Allocation_Count__c&gt;0),TRUE,FALSE)</formula>
        <label>Allocations Applied to Oppty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Won__c</fullName>
        <formula>IF(  ISPICKVAL(Sales_Outcome__c, &quot;Won&quot;) , Unweighted_Amount_Opportunity_Currency__c ,10000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovalStatusTechField__c</fullName>
        <description>Technical Field : Used for ByPass Gates Validation Rules.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Status Tech Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Cancel_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Cancel Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approvals_Current_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approvals Current Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Authorized_for_Pricing_manager__c</fullName>
        <label>Authorized for Pricing manager</label>
        <summaryFilterItems>
            <field>Offer__c.Authorized_for_Pricing_Manager__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Offer__c.ActiveOffer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Offer__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Blanket_Approval_Condition__c</fullName>
        <description>Field is used to distinguish the internal type of Blanket Approval - Re-implementation on July 21 Release</description>
        <inlineHelpText>Blanket Approval (BA) opportunities require a formal G4 approval (G5 and G6 will be bypassed). After G4 approval, BAs can be used as reference for other opportunities/offers to allow a simplified G4/G5 approval or a G4/G5 bypass.</inlineHelpText>
        <label>Blanket Approval Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blanket Approval for Price and T&amp;C</fullName>
                </value>
                <value>
                    <fullName>Blanket Approval for T&amp;C</fullName>
                </value>
                <value>
                    <fullName>Pricing And Term &amp; Condition Blanket</fullName>
                    <isActive>false</isActive>
                    <label>Pricing And Term &amp; Condition Blanket</label>
                </value>
                <value>
                    <fullName>Term &amp; Condition Blanket</fullName>
                    <isActive>false</isActive>
                    <label>Term &amp; Condition Blanket</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bus_Devt_Initiative__c</fullName>
        <description>Req 5786. Feb 2018 release. Value is copied from converted leads or opptys created from contacts .</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bus Devt Initiative</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Model__c</fullName>
        <description>Business model refers to Channel Sales and the applicable model.  These models include Direct Business, Channel Partner or Master Distributor.</description>
        <label>Business Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Business</fullName>
                    <default>true</default>
                    <label>Direct Business</label>
                </value>
                <value>
                    <fullName>Channel Partner</fullName>
                </value>
                <value>
                    <fullName>Master Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>319:The following fields should be available for standard opportunities</description>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Opportunity</fullName>
                </value>
                <value>
                    <fullName>Committed Upsell</fullName>
                </value>
                <value>
                    <fullName>Forecasting Only</fullName>
                    <isActive>false</isActive>
                    <label>Forecasting Only</label>
                </value>
                <value>
                    <fullName>Large Enterprise</fullName>
                    <isActive>false</isActive>
                    <label>Large Enterprise</label>
                </value>
                <value>
                    <fullName>Opportunity with Pre-approved or contracted T&amp;Cs</fullName>
                    <isActive>false</isActive>
                    <label>Opportunity with Pre-approved or contracted T&amp;Cs</label>
                </value>
                <value>
                    <fullName>Opportunity within a framework contract</fullName>
                    <isActive>false</isActive>
                    <label>Opportunity within a framework contract</label>
                </value>
                <value>
                    <fullName>Opportunity within partner agreement w/o Offer Support</fullName>
                    <isActive>false</isActive>
                    <label>Opportunity within partner agreement w/o Offer Support</label>
                </value>
                <value>
                    <fullName>Pre-approved Pice List for BG Presales</fullName>
                    <isActive>false</isActive>
                    <label>Pre-approved Pice List for BG Presales</label>
                </value>
                <value>
                    <fullName>Pre-approved Pice List for Sales</fullName>
                    <isActive>false</isActive>
                    <label>Pre-approved Pice List for Sales</label>
                </value>
                <value>
                    <fullName>Pre-approved Price List for Account Managers</fullName>
                    <isActive>false</isActive>
                    <label>Pre-approved Price List for Account Managers</label>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                    <isActive>false</isActive>
                    <label>Service Provider</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Contract_Request_Type__c</fullName>
        <label>Contract Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Renewal of a Contract</fullName>
                </value>
                <value>
                    <fullName>Changes to a Contract</fullName>
                </value>
                <value>
                    <fullName>New Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Existing_Contract_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Contract Reference</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQ_Count__c</fullName>
        <label>CQ Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CT_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the Manager responsible for the opportunity from an order forecast perspective.  The opportunity will roll up under the CT Head found in this field regardless of theAM Supervisor.</description>
        <label>CT Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculating_Probability__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Calculating Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Care_Contract_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Care Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Care_Renewal__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, when the first Care OIF line is booked AM will be able to automatically create a renewal opportunity.</inlineHelpText>
        <label>Care Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_LoA_Level_On_ActiveOffer__c</fullName>
        <description>Sprint 7 Hypercare Requirements #2289 : Restrict Edit of (Supporting_BG_ION__c,Lead_BG__c,Supporting_BG_MN__c,Supporting_BU_ION__c,Supporting_BG_AA__c,Supporting_BG_FN__c,Supporting_BG_GS__c,Lead_BU__c	) field after LoA upload.</description>
        <label>Check Approval level on Active Offer</label>
        <summaryFilterItems>
            <field>Offer__c.ActiveOffer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Offer__c.LoA_Approval_Level__c</field>
            <operation>equals</operation>
            <value>A, C, D, E, LoA Bypass, A+</value>
        </summaryFilterItems>
        <summaryForeignKey>Offer__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Comments_for_G5_preparation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comments are required for G5 preparation when the contract has changes when compared to G4.</inlineHelpText>
        <label>Comments for G5 preparation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_strategy__c</fullName>
        <description>Description of intended commercial strategy with high-level comparison to market price, desired pricing, and discount model.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description of intended commercial strategy with high-level comparison to market price, desired pricing, and discount model.</inlineHelpText>
        <label>Commercial strategy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Committed_OIF_EUR__c</fullName>
        <label>Committed OIF (EUR)</label>
        <summarizedField>Order_Intake_Forecast__c.OIF_Value_EUR__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Intake_Forecast__c.Forecast_Category__c</field>
            <operation>equals</operation>
            <value>Secure, Risk, Booked</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Intake_Forecast__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Committed_OIF__c</fullName>
        <inlineHelpText>The value equals the total of Booked, Secure, and Risk forecast categories.</inlineHelpText>
        <label>Committed OIF</label>
        <summarizedField>Order_Intake_Forecast__c.OIF_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Intake_Forecast__c.Forecast_Category__c</field>
            <operation>equals</operation>
            <value>Secure, Risk, Booked</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Intake_Forecast__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Committed_Unweighted_Value_in_EUR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Committed Unweighted Value in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_s__c</fullName>
        <description>Req #1316. Required for Marketo Sync</description>
        <label>Competitor(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ab initio</fullName>
                </value>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Adtran</fullName>
                </value>
                <value>
                    <fullName>Adva</fullName>
                </value>
                <value>
                    <fullName>Affirmed Networks</fullName>
                </value>
                <value>
                    <fullName>Alvarion</fullName>
                </value>
                <value>
                    <fullName>Amdocs</fullName>
                </value>
                <value>
                    <fullName>Argus</fullName>
                </value>
                <value>
                    <fullName>Asiainfo</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Aviat Networks</fullName>
                </value>
                <value>
                    <fullName>Calix</fullName>
                </value>
                <value>
                    <fullName>Ceragon</fullName>
                </value>
                <value>
                    <fullName>Ciena</fullName>
                </value>
                <value>
                    <fullName>CIENA/BluePlanet</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Cloudsense</fullName>
                </value>
                <value>
                    <fullName>CMSoft</fullName>
                </value>
                <value>
                    <fullName>Comarch</fullName>
                </value>
                <value>
                    <fullName>Comverse</fullName>
                </value>
                <value>
                    <fullName>Digital route</fullName>
                </value>
                <value>
                    <fullName>ECI</fullName>
                </value>
                <value>
                    <fullName>Ericsson</fullName>
                </value>
                <value>
                    <fullName>Evolving</fullName>
                </value>
                <value>
                    <fullName>FiberHome</fullName>
                </value>
                <value>
                    <fullName>Flytxt</fullName>
                </value>
                <value>
                    <fullName>FNT</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>GenBand</fullName>
                </value>
                <value>
                    <fullName>Harris</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Source</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <description>ID in CLM.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Price List</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 3) AND 2 AND 4 AND 5</booleanFilter>
            <filterItems>
                <field>Apttus_Config2__PriceList__c.Apttus_Config2__AccountId__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Apttus_Config2__PriceList__c.CurrencyIsoCode</field>
                <operation>equals</operation>
                <valueField>$Source.CurrencyIsoCode</valueField>
            </filterItems>
            <filterItems>
                <field>Apttus_Config2__PriceList__c.Apttus_Config2__AccountId__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Apttus_Config2__PriceList__c.Apttus_Config2__ContractNumber__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Apttus_Config2__PriceList__c.PriceList_Type__c</field>
                <operation>equals</operation>
                <value>Indirect Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Signing_Entity__c</fullName>
        <description>Req::802 This flag / field shall identify the Legal Entity</description>
        <inlineHelpText>Based on the ERP system used to execute/deliver the orders. 
For example - If Order execution/Customer invoicing is done using fNOK SAP P20 system then select fNOK otherwise, if using fALU SAP BPP system then select fALU.</inlineHelpText>
        <label>Contract Signing Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>fALU</fullName>
                </value>
                <value>
                    <fullName>fNOK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contributor_BG_1__c</fullName>
        <label>Contributor BG 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BGs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contributor_BG_2__c</fullName>
        <label>Contributor BG 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BGs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contributor_BG_3__c</fullName>
        <label>Contributor BG 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BGs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_Pre_Opportunity_Date__c</fullName>
        <description>Date and time that this opportunity was converted from a Pre Opportunity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Converted Pre Opportunity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Converted_from_Pre_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted from Pre-Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_primary_competitors__c</fullName>
        <label>Count Primary Competitors</label>
        <summaryFilterItems>
            <field>Competitor__c.Primary_Competitor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Competitor__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This field will capture Country from Account on Opportunity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Offer_Lead_Time__c</fullName>
        <formula>If(
( ISBLANK( G3_Approval_Date__c)),0,
(
If(

 (ISBLANK(G4_Approval_Date__c)),( (today())-(DATEVALUE(G3_Approval_Date__c))),((DATEVALUE(G4_Approval_Date__c))-(DATEVALUE(G3_Approval_Date__c)))

)
)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Offer Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Commitment__c</fullName>
        <description>Description of products/services or portion of the business opportunity committed by customer.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description of products/services or portion of the business opportunity committed by customer.</inlineHelpText>
        <label>Customer Commitment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Compliance__c</fullName>
        <formula>text(Account.Customer_Compliance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Compliance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Request__c</fullName>
        <description>Description of Customer&apos;s needs, compelling reasons, plans &amp; decision steps, strategy &amp; expected benefits. Indicate key Customer milestones &amp; timing, e.g., issuance of RFx, short-list selection, rollout dates.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description of Customer&apos;s needs, compelling reasons, plans &amp; decision steps, strategy &amp; expected benefits. Indicate key Customer milestones &amp; timing, e.g., issuance of RFx, short-list selection, rollout dates.</inlineHelpText>
        <label>Customer Request</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Global Account</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>